// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Button /> render Component <Button /> renders correctly 1`] = `
<a
  className="button_class common btn"
  href="/somehref"
/>
`;

exports[`Component <Button /> render Component <Button /> renders correctly 2`] = `
<div
  className="button_class common btn"
/>
`;

exports[`Component <Button /> renders correctly 1`] = `
<div
  className="undefined common btn"
/>
`;
